cleaned up code

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 body {
-  margin: 0;
+  color: #000000;
+  background-color: #95E1D3;
+  margin: 0.5rem 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +10,159 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1 {
+  margin: auto;
+  text-align: center;
+}
+
+.root {
+  width: 100%;
+}
+
+.main {
+  width: 100%;
+  text-align: center;
+}
+
+.Question {
+  text-align: left;
+  background-color: #FCE38A;
+  width: 75%;
+  padding: 1em;
+  padding-top: 0.4rem;
+  margin: 1rem auto;
+  border-radius: 2rem;
+  border: 0.1rem solid #EAFFD0;
+}
+
+.Question:nth-last-child() {
+  margin-bottom: 0px;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+button {
+  margin-bottom: 0.8rem;
+  text-align: center;
+  background-color: #FCE38A;
+  color: #000000;
+  height: 4.5rem;
+  width: 13.5rem;
+  padding: 1rem 2.5rem;
+  border: 0.2rem solid #EAFFD0;
+  font-weight: bold;
+  font-size: 1.2rem;
+  border-radius: 1.5rem;
+}
+
+h4 {
+  margin-top: 0.5rem;
+  margin-bottom: 1.5rem;
+  margin-left: 1.5em;
+}
+
+li {
+  margin: 0.8rem;
+  margin-left: 1rem;
+}
+
+@media (max-width: 510px) {
+  .Question {
+    width: 77%;
+  }
+
+  li {
+    margin: 0.8rem 0.5rem;
+    padding: 0;
+  }
+
+  h4 {
+    padding: 0;
+    margin: 0.7rem;
+  }
+}
+
+@media (max-width: 450px) {
+  .Question {
+    width: 80%
+  }
+
+  li {
+    margin: 0.8rem 0.1rem;
+    padding: 0;
+  }
+
+  h4 {
+    padding: 0;
+    margin: 0.5rem;
+  }
+}
+
+@media (max-width: 390px) {
+  li {
+    margin: 0.8rem 0.1rem;
+    padding: 0;
+  }
+
+  h4 {
+    padding: 0;
+    margin: 0.2rem;
+  }
+
+  .question {
+    padding: 0;
+  }
+
+  .Question {
+    padding: 0.5rem;
+    width: 85%;
+  }
+}
+
+@media (max-width: 330px) {
+  .Question {
+    width: 90%;
+  }
+}
+
+@media (max-width: 275px) {
+  .Question {
+    width: 95%;
+  }
+}
+
+label {
+  border-radius: 0.5em;
+  padding: 0.25rem 0.6rem;
+}
+
+button:hover {
+  background-color: #F38181;
+}
+
+.question {
+  color: #000000;
+}
+
+.correct {
+  color: #000000;
+  background-color: rgb(0, 175, 0);
+}
+
+.wrong {
+  color: #000000;
+  background-color: red;
+}
+
+.answers {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.Submit {
+  text-align: center;
 }
